# template-python

./: .env.sample  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml
.githooks/: pre-commit  pre-commit.py  prepare-commit-msg  prepare-commit-msg.py
docs/: README.md
docs/source/: conf.py  index.rst
src/template/: __init__.py  __version__.py  exceptions.py  template.py
src/utils/: benchmark.py  config.py  dict_compare.py  setup.py  tmp.py
