[tool.poetry]
name = "template-python"
version = "0.1.0"
description = "Template for python project"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://teratron.github.io/template-python"
repository = "https://github.com/teratron/template-python"
documentation = "https://teratron.github.io/template-python/docs"
keywords = [
    "template",
    "python"
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "template-python", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]
exclude = ["src/**/*.md"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
setuptools = "^67.6.0"
pre-commit = "^3.2.0"
pylint = "^2.17.1"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
black = "^23.1.0"
bandit = "^1.7.5"
isort = "^5.12.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.1.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
pydocstyle = "^6.3.0"
docformatter = { extras = ["tomli"], version = "^1.5.1" }

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]

[tool.mypy]
files = "src/**/*.py"
packages = "src/template-python"
strict = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true

[tool.pylint]
init-hook = "import sys; sys.path.append('/src/template-python')"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -ra -q --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["*test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
